# CDK-WORKER

./: .gitignore  CHANGELOG.md  README.md  cdk.context.json  cdk.json  pyproject.toml  update_lambda_env.py
src/cdk_worker/: cdk_worker_app.py  cdk_worker_stack.py
src/cdk_worker/lambda/document_summary/: index.py
src/cdk_worker/lambda/feature_extraction/: index.py
src/cdk_worker/lambda/seed_questions/: index.py
src/stitch_worker/: __init__.py  enums.py  processes.yaml  processes_loader.py  stitch_orchestration_stack.py  stitch_worker_app.py  stitch_worker_stack.py
src/stitch_worker/handlers/ec2_state_changer/: index.py
src/stitch_worker/handlers/text_extract_notification/: index.py
src/stitch_worker/lambda/block_processing/: index.py
src/stitch_worker/lambda/document_extract/: index.py
src/stitch_worker/lambda/document_summary/: index.py
src/stitch_worker/lambda/feature_extraction/: index.py
src/stitch_worker/lambda/seed_questions/: index.py
