[project]
name = "stitch-worker"
version = "0.1.1"
description = "A CDK app with 5 Lambda functions and 5 SQS queues"
authors = [
    {name = "Jason DeCorte", email = "jason@stitchstudio.ai"}
]
dependencies = [
    "aws-cdk-lib==2.*",
    "aws-lambda-powertools[parser]==3.*",
    "constructs==10.*",
    "pydantic-settings==2.*",
    "PyYAML==6.*",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stitch_worker"]

[dependency-groups]
dev = []
